overlap fix 3
fix?

--- a/css/main.css
+++ b/css/main.css
@@ -424,8 +424,8 @@ width: 73%;
     }
     
     #text_welcome{
-    margin: 20px 10px 10px 40px;
-    text-align: center;
+    margin: 20px 10px 10px 30px;
+    text-align: left;
     width: 90%;
     }
     
